# bittyboi

./: .Rhistory  .gitignore  CMakeLists.txt  README.md  bootrom  opcodes  ppu_info.odt
src/: cpu.cpp  cpu.h  gameboy.cpp  gameboy.h  main.cpp  mmu.cpp  mmu.h  ppu.cpp  ppu.h  serial.cpp  serial.h  timer.cpp  timer.h
utils/: switch_maker.R  switchstatement.txt
